<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.loya.android.paystacktutorial.MainActivity">
    <!-- Expiry Text for email address-->
    <EditText
        android:id="@+id/edit_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:imeActionId="@+id/edit_expiry_month"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />
    <!-- Expiry Text for credit card number-->
    <EditText
        android:id="@+id/edit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edit_email_address"
        android:layout_marginTop="8dp"
        android:hint="@string/card_number"
        android:imeActionId="@+id/edit_expiry_month"
        android:imeOptions="actionNext"
        android:inputType="number" />

    <!-- Divider-->
    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/layout_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edit_card_number"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@id/horizontal_divider">

        <!-- Expiry Text -->
        <TextView
            android:id="@+id/textview_expiry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/expiry" />

        <!-- EditText for expiry month -->
        <EditText
            android:id="@+id/edit_expiry_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_expiry_text"
            android:hint="@string/expiry_month"
            android:imeActionId="@+id/edit_expiry_year"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxEms="4"
            android:maxLength="2"
            android:maxLines="1"
            android:padding="8dp" />

        <!-- EditText for expiry year -->
        <EditText
            android:id="@+id/edit_expiry_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_expiry_text"
            android:layout_toRightOf="@id/edit_expiry_month"
            android:hint="@string/yy"
            android:imeActionId="@+id/edit_cvv"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxEms="4"
            android:maxLength="2"
            android:maxLines="1"
            android:padding="8dp" />
    </RelativeLayout>

    <!-- layout for cvv -->
    <RelativeLayout
        android:id="@+id/layout_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edit_card_number"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/horizontal_divider">

        <!-- CVV text -->
        <TextView
            android:id="@+id/textview_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:paddingLeft="8dp"
            android:text="@string/cvv" />

        <!-- EditText for cvv -->
        <EditText
            android:id="@+id/edit_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_cvv"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:padding="8dp" />
    </RelativeLayout>

    <!--Pay Button -->
    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
        android:text="@string/pay"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>



